--- a/Data_Struct/SortCompare/index.html
+++ b/Data_Struct/SortCompare/index.html
@@ -16,6 +16,8 @@
             let a = [9,6,4,5,65,15,0,3,10];
             console.log(a);
             quickSort(a);
+            radixSort(a);
+            countingSort(a);
         </script>
         <form>
         <select id="firstAlgo">
