--- a/Data_Struct/SortCompare/index.html
+++ b/Data_Struct/SortCompare/index.html
@@ -61,7 +61,7 @@
 
             </select>
 
-        <button onclick="main()">Analyze</button>
+        <button id="analyze">Analyze</button>
 
 
         <!-- Graph canvas -->
