--- a/Data_Struct/SortCompare/index.html
+++ b/Data_Struct/SortCompare/index.html
@@ -65,14 +65,14 @@
 
 
 
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/counting.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/heap.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/insertion.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/merge.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/quick.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/radix.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/selection.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/bubble.js"></script>
-    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/main.js"></script>
+    <script src="counting.js"></script>
+    <script src="heap.js"></script>
+    <script src="insertion.js"></script>
+    <script src="merge.js"></script>
+    <script src="quick.js"></script>
+    <script src="radix.js"></script>
+    <script src="selection.js"></script>
+    <script src="bubble.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
