--- a/Data_Struct/SortCompare/index.html
+++ b/Data_Struct/SortCompare/index.html
@@ -73,6 +73,6 @@
     <script src="radix.js"></script>
     <script src="selection.js"></script>
     <script src="bubble.js"></script>
-    <script src="main.js"></script>
+    <script src="https://omerawwad.github.io/collage/Data_Struct/SortCompare/main.js"></script>
 </body>
 </html>
